# SimpleClientServerDemo

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
client/: CMakeLists.txt  client.c  client.h  main.c
protocol/: CMakeLists.txt  protocol.c  protocol.h
server/: CMakeLists.txt  main.c  server.c  server.h
test/: test.sh
transport/: CMakeLists.txt  transport.h
transport/network/linux/: network.c  network.h
utilities/: CMakeLists.txt  log.c  log.h  utils.c  utils.h
